tests/test_assets/semantic/invalid/mutation/compound_assignment_constant_range.cog
test_compound_errors::() -> void {
    x: u8 = 1;
    x += 256;
    x -= -1;

    y: i8 = 1;
    y *= 128;

    concrete_i32: i32 = 1;
    concrete_i64: i64 = 2;
    concrete_i32 += concrete_i64;

    floating: f32 = 1.0;
    floating %= 1.0;
}
